# Pharaoh

./: .gitignore  ARCHITECTURE.md  README.md  build_mcpb.sh  index.html  package-lock.json  package.json  vite.config.ts
.beads/: issues.jsonl
.claude/: launch.json
Pharoh/: Pharoh.html  app.jsx  atoms.jsx  data.js  styles.css  view-composition.jsx  view-panels.jsx  view-pyramid.jsx  view-rails.jsx
docs/: voice-pipeline.md
gruve/: DESIGN-FOR-GRUVE.md  README.md
inference/: _common.md  _common.py  applio_infer_worker.py  applio_train_worker.py  audioldm-evaluation.md  chatterbox_server.py  download_sofa.sh  download_spatial_assets.sh  music_server.py  post_server.md  post_server.py  requirements-audiosr.txt  requirements-music.txt  requirements-rvc.txt  requirements-sfx-audioldm.txt  requirements.txt  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_support.md  app_support.rs  cli.md  cli.rs  error.rs  fountain.md  fountain.rs  integration_tests.rs  lib.md  lib.rs  main.md  main.rs  models.md  models.rs  share.md  share.rs
src-tauri/src/cli/: helpers.rs  mod.rs  project.rs  scene_script.rs
src-tauri/src/commands/: archive.rs  audio.md  audio.rs  audio_engine.md  audio_engine.rs  audio_enhance.md  audio_enhance.rs  audio_spatial.md  audio_spatial.rs  character.md  character.rs  inference.md  inference.rs  llm.md  llm.rs  mod.rs  project.md  project.rs  recording.rs  rvc.rs  script.md  script.rs  settings.md  settings.rs  setup.md  setup.rs  setup_check.rs  sidecar.md  sidecar.rs
(+124 files in other folders)
