[package]
name = "pharaoh"
version = "0.1.0"
description = "Pharaoh — AI-Powered Audio Drama Production Suite"
authors = ["MLTQ"]
edition = "2021"

[lib]
name = "pharaoh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pharaoh"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
csv = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
hound = "3"
zip = { version = "2", features = ["deflate"] }
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
